# rust-action

./: .gitignore  Cargo.toml  deny.toml
basics/: Cargo.toml
basics/src/: lib.rs  main.rs
basics/src/basics/: borrow.rs  closure.rs  collection.rs  copymove.rs  data_structure.rs  func.rs  func_return.rs  io.rs  mod.rs  pattern_matching.rs  process_control.rs  variables.rs
basics/src/engineering/: organization.rs
basics/src/lifecycle/: README.md  lifecycle.rs
basics/src/memory/: README.md  memory.rs
basics/src/ownership/: README.md  dag.rs  mod.rs  ownership.rs  problem.rs
basics/src/types/: README.md  types.rs
httpie/: Cargo.toml  README.md
httpie/src/: main.rs
queryer/: Cargo.toml  README.md
queryer-js/: Cargo.toml
queryer-py/: Cargo.toml
queryer-py/src/: lib.rs
queryer-viewer/: README.md  package-lock.json  package.json
queryer-viewer/app/src-tauri/: Cargo.toml  tauri.conf.json
queryer-viewer/app/src-tauri/src/: main.rs
queryer/examples/: covid.rs  dialect.rs  query.rs
queryer/src/: convert.rs  dialect.rs  fetcher.rs  lib.rs  loader.rs
src/basics/: closure.rs  data_structure.rs  err_handling.rs  mod.rs  pattern_matching.rs  process_control.rs
src/engineering/: organization.rs
thumbor/: Cargo.toml  README.md  abi.proto
thumbor/src/: main.rs
thumbor/src/engine/: mod.rs  photon.rs
thumbor/src/pb/: abi.rs  mod.rs
