#[package]
#authors = [ "fufeng" ]
#name = "rust-action"
#version = "0.1.0"
#edition = "2021"
#description = "A short description of my package"
#rust-version = "1.59"
#documentation = "https://docs.rs/bitflags"
#readme = "README.md"
#repository = "https://github.com/rust-lang/cargo/"
#homepage = "https://serde.rs/"
##license = "MIT OR Apache-2.0"
#license-file = "LICENSE.txt"
#keywords = ["rust in action", "rust ..."]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "basics",
    "httpie"
]
